crates/chicago-tdd-tools/src/testing/snapshots/chicago_tdd_tools__testing__snapshot__assert_inline.snap
---
source: src/testing/snapshot.rs
expression: "format!(\"{value}\")"
---
User: "user@example.com", Session active: true
