crates/chicago-tdd-tools/src/testing/snapshots/chicago_tdd_tools__testing__snapshot__assert_inline@test_environment_specific_snapshots.snap
---
source: src/testing/snapshot.rs
expression: "format!(\"{value}\")"
---
All v1.3.0 features validated
