crates/chicago-tdd-tools/src/testing/snapshots/chicago_tdd_tools__testing__snapshot__assert_inline_debug.snap
---
source: src/testing/snapshot.rs
assertion_line: 159
expression: value
---
[
    1,
    2,
    3,
]
