crates/chicago-tdd-tools/src/testing/snapshots/chicago_tdd_tools__testing__snapshot__assert_inline_json.snap
---
source: src/testing/snapshot.rs
assertion_line: 166
expression: "serde_json::to_string_pretty(value).unwrap_or_else(|_|\n\"invalid json\".to_string())"
---
{
  "key": "value",
  "number": 42
}
