crates/chicago-tdd-tools/src/testing/snapshots/chicago_tdd_tools__testing__snapshot__chatman_envelope_hash_v26_7_9.snap
---
source: src/testing/snapshot.rs
expression: value
---
8178561cc56053a6b930dc5d8383761dfdd43e039ebd9e65edf120ef8d11efb8
