crates/chicago-tdd-tools/src/testing/snapshots/chicago_tdd_tools__testing__snapshot__chatman_refusal_names_v26_7_9.snap
---
source: src/testing/snapshot.rs
expression: value
---
ValidationFailed
PlanInfeasible
TraceUnlawful
HookUnpermitted
MissingReceipt
SnapshotNotFound
BoundaryRequestMissingReceipt
Triple8UniverseOverflow
TermNotInTriple8Universe
ProfileSymbolTableMismatch
ProjectionHashMismatch
WarmPathRequired
AdmissionTableMismatch
HookPatternNotAdmitted
OcelEventNotAdmitted
LeastExpressiveRouteViolation
UnsupportedDialect
N3UnavailableByProfile
N3ActuationRefused
RouteDecisionMismatch
GraphSnapshotMismatch
ProfileHashMismatch
AgentOverrideDenied
WitnessNotAuthority
BreedUnpermitted
NondeterministicOperatorRequiresReceipt
ProcessReceiptShadowType
DuplicateCanonicalTapeType
TripleTermInSnapshot
