crates/chicago-tdd-tools/src/testing/snapshots/chicago_tdd_tools__testing__snapshot__lib_test_snapshot_debug.snap
---
source: src/testing/snapshot.rs
expression: "format!(\"{:#?}\", value)"
---
[
    1,
    2,
    3,
]
