crates/chicago-tdd-tools/src/testing/snapshots/chicago_tdd_tools__testing__snapshot__star_toml_default_config_snapshot.snap
---
source: src/testing/snapshot.rs
expression: value
---
name = "star-toml-app"
workers = 4
log_level = "info"

[server]
host = "127.0.0.1"
port = 8080

[server.tls]
enabled = false
cert_path = ""
key_path = ""
